Coal -> Carbon in Title on 0.2

--- a/cc02.html
+++ b/cc02.html
@@ -2,7 +2,7 @@
 <html lang="en" dir="ltr">
   <head>
     <meta charset="utf-8">
-    <title>Coal Canary</title>
+    <title>Carbon Canary</title>
     <link rel="icon" href="img/lfav32.png">
     <link rel="stylesheet" href="cc02.css">
     <link href="https://fonts.googleapis.com/css2?family=Abel&family=Open+Sans:wght@300;400&family=Roboto:wght@100;400&display=swap" rel="stylesheet">
