--- a/cc02.html
+++ b/cc02.html
@@ -10,7 +10,7 @@
   <body>
     <div class="nav">
       <div class="cname">Carbon Canary</div>
-      <div class="icon"><img src="img/burgicon.png"></div>
+      <div id="bicon"><img src="img/burgicon.png"></div>
     </div>
     <div class="header">
       <img class="logo" src="img/CC-Logo.png" alt="">
