--- a/cc021.html
+++ b/cc021.html
@@ -16,11 +16,23 @@
       </div>
     </div>
 
-    <div class="bread-c">
-      <div class="bread">
-        <p>Obviously this is a work in progress, the borders around the &ltdiv&gts are to be removed as soon as they're more functional than
-          they currently are. Both for the design and conceptual function as well as the responsive functionality.</p>
-        <p><em>Currently I'm only able to make the top right icon appear properly in Firefox.</em></p>
+    <div class="grid-container">
+      <div class="grid">
+        <div class="grid-item first-item">
+          <p>First</p>
+        </div>
+        <div class="grid-item">
+          <p>Second</p>
+        </div>
+        <div class="grid-item">
+          <img src="images/three.svg" alt="img three">
+        </div>
+        <div class='grid-item'>
+        <p>Fourth</p>
+        </div>
+        <div class='grid-item last-item'>
+          <p>Fifth</p>
+        </div>
       </div>
     </div>
 
