--- a/old/cc021.html
+++ b/old/cc021.html
@@ -18,20 +18,13 @@
 
     <div class="grid-container">
       <div class="grid">
-        <div class="grid-item first-item">
-          <p>First</p>
+        <div class="grid-item">
+          <p>This is a work in progress. Nothing is currently functioning properly (<em>and won't be for a while</em>).</p>
+          <p>The purpose of this site is simply practice and showcasing for eventual scenarios where help would
+            be required.</p>
         </div>
         <div class="grid-item">
           <p>Second</p>
-        </div>
-        <div class="grid-item">
-          <img src="images/three.svg" alt="img three">
-        </div>
-        <div class='grid-item'>
-        <p>Fourth</p>
-        </div>
-        <div class='grid-item last-item'>
-          <p>Fifth</p>
         </div>
       </div>
     </div>
