adding the menu

--- a/cc03.html
+++ b/cc03.html
@@ -8,6 +8,17 @@
     <link href="https://fonts.googleapis.com/css2?family=Abel&family=Open+Sans:wght@300;400&family=Roboto:wght@100;400&display=swap" rel="stylesheet">
   </head>
   <body>
+    <div class="page">
 
+      <div class="section menu">
+        <div class="cname">Carbon Canary</div>
+        <div class="icon-c">
+          <div id="bicon"><img src="img/burgicon2.png"></div>
+        </div>
+      </div>
+
+
+
+    </div>
   </body>
 </html>
