--- a/cc03.html
+++ b/cc03.html
@@ -17,6 +17,14 @@
         </div>
       </div>
 
+      <div class="section header">
+        <img src="img/CC-Logo.png" alt="logo">
+      </div>
+
+      <div class="section content">
+
+      </div>
+
 
 
     </div>
