--- a/cc03.html
+++ b/cc03.html
@@ -11,21 +11,22 @@
     <div class="page">
 
       <div class="section menu">
-        <div class="cname">Carbon Canary</div>
+        <!--div class="cname-c"-->
+          <div class="cname">Carbon Canary</div>
         <div class="icon-c">
           <div id="bicon"><img src="img/burgicon2.png"></div>
         </div>
-      </div>
-
-      <div class="section header">
-        <img src="img/CC-Logo.png" alt="logo">
       </div>
 
       <div class="section content">
 
       </div>
 
-
+      <div class="section footer">
+        <div class="logo-c">
+          <img class="logo" src="img/CC-Logo.png" alt="logo">
+        </div>
+      </div>
 
     </div>
   </body>
