--- a/test.html
+++ b/test.html
@@ -14,8 +14,13 @@
         <div class="cname-c">
           <div class="cname">Carbon Canary</div>
         </div>
-        <div class="icon-c">
+        <div class="icon-c dropdown">
           <div class="bicon"><img src="img/burgicon2.png"></div>
+          <div class="dropdown-content">
+            <a href="#">Link 1</a>
+            <a href="#">Link 2</a>
+            <a href="#">Link 3</a>
+          </div>
         </div>
       </div>
     </div>
