push to check on mobile

--- a/test.html
+++ b/test.html
@@ -9,6 +9,8 @@
   </head>
   <body>
 
+<div class="page">
+
     <div class="top-c">
       <div class="top">
         <div class="cname-c">
@@ -43,6 +45,8 @@
         </div>
       </div>
     </div>
+
+</div>
 
   </body>
 </html>
