Dropdown hover fix

--- a/test.html
+++ b/test.html
@@ -30,10 +30,10 @@
     <div class="main-c">
       <div class="main">
         <div class="section one">
-          <p>Coal Mine Canaries</p>
+          <p>Coal Mine Canaries.</p>
         </div>
         <div class="section two">
-          <p>Me filling that purpose</p>
+          <p>Sensitive to the environment. Early indication of problems.</p>
         </div>
       </div>
     </div>
